Fixes CSS bug on mobile
Where <pre> elements would overflow the container

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -175,6 +175,10 @@ pre code {
   color: inherit;
   background-color: transparent;
 }
+p code {
+  word-break: keep-all;
+  word-wrap: break-word;
+}
 
 /* Pygments via Jekyll */
 .highlight {
